# python-rag-data-science

./: .gitignore  README.md  chunk_stats.py  docker-compose.yml  license  make_eval_holdout.py  pyproject.toml  run.py
configs/: config.yaml
configs/chunker/: default.yaml
configs/evaluator/: default.yaml
configs/fetcher/: huggingface.yaml
configs/indexer/: weaviate.yaml
configs/pipeline/: default.yaml
data/: eval.yaml  eval_handwritten.yaml
outputs/2026-06-07/20-14-08/.hydra/: hydra.yaml
outputs/2026-06-07/20-16-21/.hydra/: hydra.yaml
outputs/2026-06-07/20-19-03/.hydra/: hydra.yaml
outputs/2026-06-07/20-19-45/.hydra/: hydra.yaml
outputs/2026-06-07/20-22-42/.hydra/: hydra.yaml
outputs/2026-06-07/20-24-46/.hydra/: hydra.yaml
outputs/2026-06-07/21-16-14/.hydra/: hydra.yaml
outputs/2026-06-13/15-02-10/.hydra/: hydra.yaml
outputs/2026-06-13/16-22-31/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-13/16-40-26/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-06-13/16-47-48/.hydra/: hydra.yaml
outputs/2026-06-13/17-11-16/.hydra/: hydra.yaml
outputs/2026-06-13/17-17-40/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-06-13/17-26-26/.hydra/: hydra.yaml
outputs/2026-06-13/23-53-45/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-14/00-15-53/.hydra/: hydra.yaml
outputs/2026-06-14/01-29-40/.hydra/: hydra.yaml
outputs/2026-06-14/02-14-13/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-06-14/12-52-49/.hydra/: config.yaml  hydra.yaml
src/: evaluate.py  fetcher.py  indexer.py  pipeline.py
(+27 files in other folders)
