[project]
name = "python-rag-simple"
version = "0.1.0"
description = "Python Data Extraction RAG — simple version"
requires-python = ">=3.11,<3.13"

dependencies = [
    "weaviate-client>=4.6.0,<5.0.0",
    "langchain==0.2.0",
    "langchain-community==0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-weaviate==0.0.6",
    "sentence-transformers==3.0.0",
    "torch>=2.5.0",
    "ragas==0.1.9",
    "datasets==2.19.0",
    "mlflow==2.13.0",
    "requests>=2.32.3",
    "pandas==2.2.2",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "hydra-core>=1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Pin setuptools so pkg_resources (used by mlflow) still works
[tool.uv]
override-dependencies = [
    "setuptools==80.10.2",
]

[tool.uv.extra-build-dependencies]
pyarrow = ["pkg_resources"]

# CPU-only torch — uv picks the correct wheel for your platform
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "notebook>=7.5.7",
]
